kubernetes/conjureink-prod-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: conjureink-prod-namespace
  labels:
    name: conjureink-prod-namespace
