kubernetes/conjureink-test-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: conjureink-test-namespace
  labels:
    name: conjureink-test-namespace
