kubernetes/conjureink-prod-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conjureink-deployment
  namespace: conjureink-prod-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: conjureink-prod
  template:
    metadata:
      labels:
        app: conjureink-prod
    spec:
      containers:
      - name: conjureink-prod
      # the image is pulled to the local machine by the test pipeline already
        image: conjureink:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        volumeMounts:
        - name: content-volume
          mountPath: /app/content
      imagePullSecrets:
      - name: ghcr-login-secret
      volumes:
      - name: content-volume
        hostPath:
          path: /home/conjureink/prod/content
