kubernetes/conjureink-test-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: conjureink-test-deployment
  namespace: conjureink-test-namespace
spec:
  replicas: 0
  selector:
    matchLabels:
      app: conjureink-test
  template:
    metadata:
      labels:
        app: conjureink-test
    spec:
      containers:
      - name: conjureink-test
        image: ghcr.io/ostelaymetaule/conjureink:main
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        volumeMounts:
        - name: content-volume
          mountPath: /app/content
      imagePullSecrets:
      - name: ghcr-login-secret
      volumes:
      - name: content-volume
        hostPath:
          path: /home/conjureink/test/content
