kubernetes/conjureink-prod-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conjureink-prod-service
  namespace: conjureink-prod-namespace
spec:
  selector:
    app: conjureink-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
