kubernetes/conjureink-test-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conjureink-test-service
  namespace: conjureink-test-namespace
spec:
  selector:
    app: conjureink-test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
