kubernetes/conjureink-test-ingress.yaml
# ingress conjureink-test-ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    kubernetes.io/ingress.class: traefik
  labels:
    app: conjureink-test
  name: conjureink-test
  namespace: conjureink-test-namespace
spec:
  rules:
  - host: test.conjure.ink # Change by your domain
    http:
      paths:
      - backend:
          service:
            name: conjureink-test-deployment
            port: 
              number: 80
        path: /
        pathType: Prefix  
  tls:
  - hosts:
    - test.conjure.ink # Change by your domain
    secretName: test-conjure-ink-com-tls
